<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:orientation="vertical"
    tools:context=".ReclamoComentarioYfoto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/PreguntaTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_weight=".5"

                android:text="@string/comentario"
                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse" />

            <ImageView
                android:id="@+id/PhotoView"
                android:layout_width="320dp"
                android:layout_height="240dp"

                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/logonuevo" />

            <EditText
                android:id="@+id/ETReclamoComentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:ems="10"
                android:hint="@string/comentario"

                android:inputType="textLongMessage"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/buttonPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight=".5"

                android:onClick="onClick"
                android:text="@string/tomar_foto" />

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight=".5"
                android:onClick="onClick"
                android:text="@string/enviar" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>
</LinearLayout>
